--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <%= stylesheet_link_tag 'main.css' %>
 </head>
 <body>
-    <h1>The standard layout file generated</h1>
-    <%= yield %>
+    <div class="content">
+        <h1 class='app-name'>Blogger</h1>
+        <%= yield %>
+    </div>
 </body>
 </html>
