--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,8 @@
-<%= image_tag("https://unsplash.com/photos/F_-0BxGuVvo")%>
-<%= user.name %><br>
-<p>Number of posts: <%= user.posts_counter%></p>
+<%= stylesheet_link_tag 'users.css' %>
+<div class='user-card'>
+    <div class='user-name-img'>
+        <%= image_tag("https://unsplash.com/photos/F_-0BxGuVvo", :class => 'user-img')%>
+        <%= user.name%><br>
+    </div>
+    <p class='posts-counter'>Number of posts: <%= user.posts_counter%></p>
+</div>
