Add styles to posts

--- a/app/views/users/_post.html.erb
+++ b/app/views/users/_post.html.erb
@@ -1,5 +1,8 @@
-<%= post.title %><br>
-<%= post.text%><br>
-<div>
-    <p>Comments:<%= post.comments_counter%>    Likes:<%= post.likes_counter%></p>
+<%= stylesheet_link_tag 'posts.css' %>
+<div class='post-card'>
+    <%= post.title %><br>
+    <%= post.text%><br>
+    <div class='likes-comments-counters'>
+        <p>Comments:<%= post.comments_counter%>    Likes:<%= post.likes_counter%></p>
+    </div>
 </div>
