--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -1,16 +1,17 @@
-.post-card{
-    display: flex;
-    flex-direction: column;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    padding: 10px;
-    margin-bottom: 9px;
-    border-radius: 8px;
-    border-bottom-left-radius: 32px;
-    border-bottom-right-radius: 32px;
+.post-card {
+  display: flex;
+  flex-direction: column;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  padding: 10px;
+  margin-bottom: 9px;
+  border-radius: 8px;
+  border-bottom-left-radius: 32px;
+  border-bottom-right-radius: 32px;
 }
 
-.likes-comments-counters{
-    text-align: end;
-    font-size: 14px;
-    color: chocolate;
+.likes-comments-counters {
+  text-align: end;
+  font-size: 14px;
+  color: chocolate;
 }
