Fix stylint errors #2

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -1,6 +1,6 @@
 .user-card {
   border-radius: 15px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
   display: flex;
   flex-direction: column;
   margin-bottom: 7px;
