--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -1,9 +1,7 @@
 .post-card {
   display: flex;
   flex-direction: column;
-  box-shadow:
-    rgba(60, 64, 67, 0.3) 0 1px 2px 0,
-    rgba(60, 64, 67, 0.15) 0 1px 3px 1;
+  box-shadow: rgba(60, 64, 67, 0.3) 0.1px 1px 2px 0.1px, rgba(60, 64, 67, 0.15) 0.1px 1px 3px 1px;
   padding: 10px;
   margin-bottom: 9px;
   border-radius: 8px;
