--- a/app/views/users/_post.html.erb
+++ b/app/views/users/_post.html.erb
@@ -3,6 +3,10 @@
     <%= post.title %><br>
     <%= post.text%><br>
     <div class='likes-comments-counters'>
+        <%= form_with url: user_post_likes_path(post_id: post.id, user_id: user.id ), method: :post do |f| %>
+        <%=f.hidden_field :post_id, value: post.id %>
+        <%= f.submit :Like %> 
+        <%end%>
         <p>Comments:<%= post.comments_counter%>    Likes:<%= post.likes_counter%></p>
     </div>
 </div>
