Add link to user

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,7 +2,7 @@
 <div class='user-card'>
     <div class='user-name-img'>
         <%= image_tag("https://unsplash.com/photos/F_-0BxGuVvo", :class => 'user-img')%>
-        <%= user.name%><br>
+        <%= link_to user.name, user_path(user), :class => 'user-name-img' %><br>
     </div>
     <p class='posts-counter'>Number of posts: <%= user.posts_counter%></p>
 </div>
