--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,3 +6,5 @@
   <% comments = post.comments.includes(:user).order(created_at: :desc).limit(5) %>
   <%= render partial: 'comments', locals: {comments: comments}%>
 <% end %>
+
+<%= link_to 'Next', :class => 'pagination'%>
