--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -13,7 +13,16 @@
 <body>
     <div class="content">
         <h1 class='app-name'>Blogger</h1>
+        <% if user_signed_in? %>
+            Welcome, <%= current_user.name %>!
+        <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
         <%= yield %>
+        <% else %>
+            <%= link_to "Sign in", new_user_session_path %>
+            <%= link_to "Sign up", new_user_registration_path%>
+        <% end %>
     </div>
 </body>
 </html>
