Adjust email confirmation

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,12 @@
   </div>
 
   <div class="field">
+    <%= f.label :email_confirmation %><br />
+    <%= f.text_field :email_confirmation %>
+  </div>
+   
+
+  <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name, autocomplete: "name" %>
   </div>
