--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
 <p>BY: <%= @post.user.name%></p>
 <%= render partial: 'users/post', locals: { post: @post, user: @post.user }%>
-<%= render partial: 'comments', locals: {comments: @post.comments}%>
-<%= render partial: 'comment_form', locals: {user_id: @post.user.id, post_id: @post.id} %>
+<%= render partial: 'comments', locals: {comments: @post.comments, user: current_user, post: @post}%>
+<%= render partial: 'comment_form', locals: {user_id: params[:user_id], post_id: @post.id} %>
