--- a/app/views/posts/_comment_form.html.erb
+++ b/app/views/posts/_comment_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with method: :post, url: "/users/#{user_id}/posts/#{post_id}/comments" do |f|%>
+<%= form_with method: :post, url: "/users/#{current_user.id}/posts/#{post_id}/comments" do |f|%>
     <%= f.text_field :text%>
     <%= f.submit :AddComment%>
 <% end %>
