--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -1,13 +1,15 @@
 <%= stylesheet_link_tag 'comments.css' %>
 
 <div class="comments-box">
-    <% comments.each do |comment| %>
-      <div class='comment-card'>
-        <p><%= comment.user.name%>: <%= comment.text%></p>
+  <% comments.each do |comment| %>
+    <div class='comment-card'>
+      <p><%= comment.user.name%>: <%= comment.text%></p>
+      <% if can? :destroy, comment %>
         <%= form_with url: user_post_comment_path(comment.user, comment.post, comment), method: :delete do |f| %>
-            <%= f.hidden_field :post_id, value: comment.post.id %>
-            <%= f.submit 'Delete' ,class: 'fa fa-trash' %> 
-            <%end%>
-      </div>
-    <% end %>
+          <%= f.hidden_field :post_id, value: comment.post.id %>
+          <%= f.submit 'Delete' ,class: 'fa fa-trash' %> 
+        <% end %>
+      <% end %>
+    </div>
+  <% end %>
 </div>
