--- a/app/views/users/_post.html.erb
+++ b/app/views/users/_post.html.erb
@@ -7,10 +7,12 @@
         <%= f.hidden_field :post_id, value: post.id %>
         <%= f.submit :Like %> 
         <%end%><br/>
+        <% if can? :destroy, @post %>
             <%= form_with url: user_post_path(user, post), method: :delete do |f| %>
             <%= f.hidden_field :post_id, value: post.id %>
             <%= f.submit :Delete %> 
             <%end%><br/>
+        <%end%>
         <p>Comments:<%= post.comments_counter%>    Likes:<%= post.likes_counter%></p>
     </div>
 </div>
